--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 logging.level.org.hibernate.SQL=debug
 
 spring.jpa.hibernate.ddl-auto=update
