--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=9090
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+#spring.datasource.url=jdbc:mysql://rdssdp3.cjzizeeedt0c.us-west-2.rds.amazonaws.com:3306/sdp3
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/sdp3
 spring.datasource.username=root
 spring.datasource.password=root
